--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -8,42 +8,12 @@
     tools:context=".modules.main.category.details.DetailsFragment">
 
 
-    <ProgressBar
-        android:id="@+id/progressBarDetails"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/floatingActionButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/white"-->
-<!--        android:backgroundTint="@color/white"-->
-<!--        android:clickable="true"-->
-<!--        android:contentDescription="@string/add_favorite"-->
-<!--        android:focusable="true"-->
-
-<!--        android:src="@drawable/ic_favorite_det"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
+        android:padding="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,6 +70,7 @@
 
                 android:textColorLink="#283593"
                 android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/alcoholicDrink"
                 style="@style/DetailsTextView"
@@ -107,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textStyle="normal" />
+
             <TextView
                 android:id="@+id/instructionsDrink"
                 style="@style/DetailsTextView"
@@ -115,7 +87,6 @@
                 android:textSize="16sp"
 
                 android:textStyle="normal" />
-
 
 
             <TextView
@@ -155,5 +126,21 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+
+        android:contentDescription="@string/add_favorite"
+        android:focusable="true"
+        android:src="@drawable/ic_favorite_det"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
