--- a/app/src/main/res/layout/fragment_viewpager.xml
+++ b/app/src/main/res/layout/fragment_viewpager.xml
@@ -23,6 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:visibility="invisible"
+        android:backgroundTint="@color/purple_500"
+        android:progressBackgroundTint="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
