--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -5,5 +5,6 @@
     android:id="@+id/menu_search"
     android:title=""
     app:showAsAction="ifRoom"
+    app:actionViewClass="androidx.appcompat.widget.SearchView"
     android:icon="@drawable/ic_search_24"/>
 </menu>
